--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4765,6 +4765,210 @@ section.lazy-placeholder:after {
     margin-left: 0 !important;
   }
 }
+.cid-rPOPLPuwK8 {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-rPOPLPuwK8 .carousel-control {
+  background: #000;
+}
+.cid-rPOPLPuwK8 .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rPOPLPuwK8 .carousel-item {
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-rPOPLPuwK8 .carousel-item .media-container-row {
+  -webkit-flex-grow: 1;
+  flex-grow: 1;
+}
+.cid-rPOPLPuwK8 .carousel-item .wrap-img {
+  text-align: center;
+}
+.cid-rPOPLPuwK8 .carousel-item .wrap-img img {
+  max-height: 150px;
+  width: auto;
+  max-width: 100%;
+}
+.cid-rPOPLPuwK8 .carousel-controls {
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-rPOPLPuwK8 .carousel-controls .carousel-control {
+  background: #000;
+  border-radius: 50%;
+  position: static;
+  width: 40px;
+  height: 40px;
+  margin-top: 2rem;
+  border-width: 1px;
+}
+.cid-rPOPLPuwK8 .carousel-controls .carousel-control.carousel-control-prev {
+  left: auto;
+  margin-right: 20px;
+  margin-left: 0;
+}
+.cid-rPOPLPuwK8 .carousel-controls .carousel-control.carousel-control-next {
+  right: auto;
+  margin-right: 0;
+}
+.cid-rPOPLPuwK8 .carousel-controls .carousel-control .mbr-iconfont {
+  font-size: 1rem;
+}
+.cid-rPOPLPuwK8 .cloneditem-1,
+.cid-rPOPLPuwK8 .cloneditem-2,
+.cid-rPOPLPuwK8 .cloneditem-3,
+.cid-rPOPLPuwK8 .cloneditem-4,
+.cid-rPOPLPuwK8 .cloneditem-5 {
+  display: none;
+}
+.cid-rPOPLPuwK8 .col-lg-15 {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 100%;
+  -webkit-flex: 0 0 100%;
+  flex: 0 0 100%;
+  max-width: 100%;
+  position: relative;
+  min-height: 1px;
+  padding-right: 10px;
+  padding-left: 10px;
+  width: 100%;
+}
+@media (min-width: 992px) {
+  .cid-rPOPLPuwK8 .col-lg-15 {
+    -ms-flex: 0 0 20%;
+    -webkit-flex: 0 0 20%;
+    flex: 0 0 20%;
+    max-width: 20%;
+    width: 20%;
+  }
+  .cid-rPOPLPuwK8 .carousel-inner.slides2 > .carousel-item.active.carousel-item-right,
+  .cid-rPOPLPuwK8 .carousel-inner.slides2 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(50%, 0, 0);
+    transform: translate3d(50%, 0, 0);
+  }
+  .cid-rPOPLPuwK8 .carousel-inner.slides2 > .carousel-item.active.carousel-item-left,
+  .cid-rPOPLPuwK8 .carousel-inner.slides2 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-50%, 0, 0);
+    transform: translate3d(-50%, 0, 0);
+  }
+  .cid-rPOPLPuwK8 .carousel-inner.slides2 > .carousel-item.carousel-item-left,
+  .cid-rPOPLPuwK8 .carousel-inner.slides2 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-rPOPLPuwK8 .carousel-inner.slides2 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-rPOPLPuwK8 .carousel-inner.slides2 .cloneditem-1,
+  .cid-rPOPLPuwK8 .carousel-inner.slides2 .cloneditem-2,
+  .cid-rPOPLPuwK8 .carousel-inner.slides2 .cloneditem-3 {
+    display: block;
+  }
+  .cid-rPOPLPuwK8 .carousel-inner.slides3 > .carousel-item.active.carousel-item-right,
+  .cid-rPOPLPuwK8 .carousel-inner.slides3 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(33.333333%, 0, 0);
+    transform: translate3d(33.333333%, 0, 0);
+  }
+  .cid-rPOPLPuwK8 .carousel-inner.slides3 > .carousel-item.active.carousel-item-left,
+  .cid-rPOPLPuwK8 .carousel-inner.slides3 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-33.333333%, 0, 0);
+    transform: translate3d(-33.333333%, 0, 0);
+  }
+  .cid-rPOPLPuwK8 .carousel-inner.slides3 > .carousel-item.carousel-item-left,
+  .cid-rPOPLPuwK8 .carousel-inner.slides3 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-rPOPLPuwK8 .carousel-inner.slides3 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-rPOPLPuwK8 .carousel-inner.slides3 .cloneditem-1,
+  .cid-rPOPLPuwK8 .carousel-inner.slides3 .cloneditem-2,
+  .cid-rPOPLPuwK8 .carousel-inner.slides3 .cloneditem-3 {
+    display: block;
+  }
+  .cid-rPOPLPuwK8 .carousel-inner.slides4 > .carousel-item.active.carousel-item-right,
+  .cid-rPOPLPuwK8 .carousel-inner.slides4 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(25%, 0, 0);
+    transform: translate3d(25%, 0, 0);
+  }
+  .cid-rPOPLPuwK8 .carousel-inner.slides4 > .carousel-item.active.carousel-item-left,
+  .cid-rPOPLPuwK8 .carousel-inner.slides4 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-25%, 0, 0);
+    transform: translate3d(-25%, 0, 0);
+  }
+  .cid-rPOPLPuwK8 .carousel-inner.slides4 > .carousel-item.carousel-item-left,
+  .cid-rPOPLPuwK8 .carousel-inner.slides4 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-rPOPLPuwK8 .carousel-inner.slides4 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-rPOPLPuwK8 .carousel-inner.slides4 .cloneditem-1,
+  .cid-rPOPLPuwK8 .carousel-inner.slides4 .cloneditem-2,
+  .cid-rPOPLPuwK8 .carousel-inner.slides4 .cloneditem-3 {
+    display: block;
+  }
+  .cid-rPOPLPuwK8 .carousel-inner.slides5 > .carousel-item.active.carousel-item-right,
+  .cid-rPOPLPuwK8 .carousel-inner.slides5 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(20%, 0, 0);
+    transform: translate3d(20%, 0, 0);
+  }
+  .cid-rPOPLPuwK8 .carousel-inner.slides5 > .carousel-item.active.carousel-item-left,
+  .cid-rPOPLPuwK8 .carousel-inner.slides5 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-20%, 0, 0);
+    transform: translate3d(-20%, 0, 0);
+  }
+  .cid-rPOPLPuwK8 .carousel-inner.slides5 > .carousel-item.carousel-item-left,
+  .cid-rPOPLPuwK8 .carousel-inner.slides5 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-rPOPLPuwK8 .carousel-inner.slides5 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-rPOPLPuwK8 .carousel-inner.slides5 .cloneditem-1,
+  .cid-rPOPLPuwK8 .carousel-inner.slides5 .cloneditem-2,
+  .cid-rPOPLPuwK8 .carousel-inner.slides5 .cloneditem-3,
+  .cid-rPOPLPuwK8 .carousel-inner.slides5 .cloneditem-4 {
+    display: block;
+  }
+  .cid-rPOPLPuwK8 .carousel-inner.slides6 > .carousel-item.active.carousel-item-right,
+  .cid-rPOPLPuwK8 .carousel-inner.slides6 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(16.666667%, 0, 0);
+    transform: translate3d(16.666667%, 0, 0);
+  }
+  .cid-rPOPLPuwK8 .carousel-inner.slides6 > .carousel-item.active.carousel-item-left,
+  .cid-rPOPLPuwK8 .carousel-inner.slides6 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-16.666667%, 0, 0);
+    transform: translate3d(-16.666667%, 0, 0);
+  }
+  .cid-rPOPLPuwK8 .carousel-inner.slides6 > .carousel-item.carousel-item-left,
+  .cid-rPOPLPuwK8 .carousel-inner.slides6 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-rPOPLPuwK8 .carousel-inner.slides6 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-rPOPLPuwK8 .carousel-inner.slides6 .cloneditem-1,
+  .cid-rPOPLPuwK8 .carousel-inner.slides6 .cloneditem-2,
+  .cid-rPOPLPuwK8 .carousel-inner.slides6 .cloneditem-3,
+  .cid-rPOPLPuwK8 .carousel-inner.slides6 .cloneditem-4,
+  .cid-rPOPLPuwK8 .carousel-inner.slides6 .cloneditem-5 {
+    display: block;
+  }
+}
 .cid-rFzmin70vW {
   padding-top: 120px;
   padding-bottom: 120px;
