--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3476,7 +3476,7 @@ section.lazy-placeholder:after {
 }
 .cid-rFznVGDtsu {
   padding-top: 120px;
-  padding-bottom: 90px;
+  padding-bottom: 60px;
   background-image: url("../../../assets/images/thumbnail-sven-maurits-1920x1080.jpeg");
 }
 .cid-rFznVGDtsu .mbr-section-subtitle {
@@ -3599,6 +3599,210 @@ section.lazy-placeholder:after {
 .cid-rFznVGDtsu .mbr-section-title {
   color: #ffffff;
   text-align: left;
+}
+.cid-rQjS5xkVOr {
+  padding-top: 45px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rQjS5xkVOr .carousel-control {
+  background: #000;
+}
+.cid-rQjS5xkVOr .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rQjS5xkVOr .carousel-item {
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-rQjS5xkVOr .carousel-item .media-container-row {
+  -webkit-flex-grow: 1;
+  flex-grow: 1;
+}
+.cid-rQjS5xkVOr .carousel-item .wrap-img {
+  text-align: center;
+}
+.cid-rQjS5xkVOr .carousel-item .wrap-img img {
+  max-height: 150px;
+  width: auto;
+  max-width: 100%;
+}
+.cid-rQjS5xkVOr .carousel-controls {
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-rQjS5xkVOr .carousel-controls .carousel-control {
+  background: #000;
+  border-radius: 50%;
+  position: static;
+  width: 40px;
+  height: 40px;
+  margin-top: 2rem;
+  border-width: 1px;
+}
+.cid-rQjS5xkVOr .carousel-controls .carousel-control.carousel-control-prev {
+  left: auto;
+  margin-right: 20px;
+  margin-left: 0;
+}
+.cid-rQjS5xkVOr .carousel-controls .carousel-control.carousel-control-next {
+  right: auto;
+  margin-right: 0;
+}
+.cid-rQjS5xkVOr .carousel-controls .carousel-control .mbr-iconfont {
+  font-size: 1rem;
+}
+.cid-rQjS5xkVOr .cloneditem-1,
+.cid-rQjS5xkVOr .cloneditem-2,
+.cid-rQjS5xkVOr .cloneditem-3,
+.cid-rQjS5xkVOr .cloneditem-4,
+.cid-rQjS5xkVOr .cloneditem-5 {
+  display: none;
+}
+.cid-rQjS5xkVOr .col-lg-15 {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 100%;
+  -webkit-flex: 0 0 100%;
+  flex: 0 0 100%;
+  max-width: 100%;
+  position: relative;
+  min-height: 1px;
+  padding-right: 10px;
+  padding-left: 10px;
+  width: 100%;
+}
+@media (min-width: 992px) {
+  .cid-rQjS5xkVOr .col-lg-15 {
+    -ms-flex: 0 0 20%;
+    -webkit-flex: 0 0 20%;
+    flex: 0 0 20%;
+    max-width: 20%;
+    width: 20%;
+  }
+  .cid-rQjS5xkVOr .carousel-inner.slides2 > .carousel-item.active.carousel-item-right,
+  .cid-rQjS5xkVOr .carousel-inner.slides2 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(50%, 0, 0);
+    transform: translate3d(50%, 0, 0);
+  }
+  .cid-rQjS5xkVOr .carousel-inner.slides2 > .carousel-item.active.carousel-item-left,
+  .cid-rQjS5xkVOr .carousel-inner.slides2 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-50%, 0, 0);
+    transform: translate3d(-50%, 0, 0);
+  }
+  .cid-rQjS5xkVOr .carousel-inner.slides2 > .carousel-item.carousel-item-left,
+  .cid-rQjS5xkVOr .carousel-inner.slides2 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-rQjS5xkVOr .carousel-inner.slides2 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-rQjS5xkVOr .carousel-inner.slides2 .cloneditem-1,
+  .cid-rQjS5xkVOr .carousel-inner.slides2 .cloneditem-2,
+  .cid-rQjS5xkVOr .carousel-inner.slides2 .cloneditem-3 {
+    display: block;
+  }
+  .cid-rQjS5xkVOr .carousel-inner.slides3 > .carousel-item.active.carousel-item-right,
+  .cid-rQjS5xkVOr .carousel-inner.slides3 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(33.333333%, 0, 0);
+    transform: translate3d(33.333333%, 0, 0);
+  }
+  .cid-rQjS5xkVOr .carousel-inner.slides3 > .carousel-item.active.carousel-item-left,
+  .cid-rQjS5xkVOr .carousel-inner.slides3 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-33.333333%, 0, 0);
+    transform: translate3d(-33.333333%, 0, 0);
+  }
+  .cid-rQjS5xkVOr .carousel-inner.slides3 > .carousel-item.carousel-item-left,
+  .cid-rQjS5xkVOr .carousel-inner.slides3 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-rQjS5xkVOr .carousel-inner.slides3 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-rQjS5xkVOr .carousel-inner.slides3 .cloneditem-1,
+  .cid-rQjS5xkVOr .carousel-inner.slides3 .cloneditem-2,
+  .cid-rQjS5xkVOr .carousel-inner.slides3 .cloneditem-3 {
+    display: block;
+  }
+  .cid-rQjS5xkVOr .carousel-inner.slides4 > .carousel-item.active.carousel-item-right,
+  .cid-rQjS5xkVOr .carousel-inner.slides4 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(25%, 0, 0);
+    transform: translate3d(25%, 0, 0);
+  }
+  .cid-rQjS5xkVOr .carousel-inner.slides4 > .carousel-item.active.carousel-item-left,
+  .cid-rQjS5xkVOr .carousel-inner.slides4 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-25%, 0, 0);
+    transform: translate3d(-25%, 0, 0);
+  }
+  .cid-rQjS5xkVOr .carousel-inner.slides4 > .carousel-item.carousel-item-left,
+  .cid-rQjS5xkVOr .carousel-inner.slides4 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-rQjS5xkVOr .carousel-inner.slides4 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-rQjS5xkVOr .carousel-inner.slides4 .cloneditem-1,
+  .cid-rQjS5xkVOr .carousel-inner.slides4 .cloneditem-2,
+  .cid-rQjS5xkVOr .carousel-inner.slides4 .cloneditem-3 {
+    display: block;
+  }
+  .cid-rQjS5xkVOr .carousel-inner.slides5 > .carousel-item.active.carousel-item-right,
+  .cid-rQjS5xkVOr .carousel-inner.slides5 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(20%, 0, 0);
+    transform: translate3d(20%, 0, 0);
+  }
+  .cid-rQjS5xkVOr .carousel-inner.slides5 > .carousel-item.active.carousel-item-left,
+  .cid-rQjS5xkVOr .carousel-inner.slides5 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-20%, 0, 0);
+    transform: translate3d(-20%, 0, 0);
+  }
+  .cid-rQjS5xkVOr .carousel-inner.slides5 > .carousel-item.carousel-item-left,
+  .cid-rQjS5xkVOr .carousel-inner.slides5 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-rQjS5xkVOr .carousel-inner.slides5 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-rQjS5xkVOr .carousel-inner.slides5 .cloneditem-1,
+  .cid-rQjS5xkVOr .carousel-inner.slides5 .cloneditem-2,
+  .cid-rQjS5xkVOr .carousel-inner.slides5 .cloneditem-3,
+  .cid-rQjS5xkVOr .carousel-inner.slides5 .cloneditem-4 {
+    display: block;
+  }
+  .cid-rQjS5xkVOr .carousel-inner.slides6 > .carousel-item.active.carousel-item-right,
+  .cid-rQjS5xkVOr .carousel-inner.slides6 > .carousel-item.carousel-item-next {
+    left: 0;
+    -webkit-transform: translate3d(16.666667%, 0, 0);
+    transform: translate3d(16.666667%, 0, 0);
+  }
+  .cid-rQjS5xkVOr .carousel-inner.slides6 > .carousel-item.active.carousel-item-left,
+  .cid-rQjS5xkVOr .carousel-inner.slides6 > .carousel-item.carousel-item-prev {
+    left: 0;
+    -webkit-transform: translate3d(-16.666667%, 0, 0);
+    transform: translate3d(-16.666667%, 0, 0);
+  }
+  .cid-rQjS5xkVOr .carousel-inner.slides6 > .carousel-item.carousel-item-left,
+  .cid-rQjS5xkVOr .carousel-inner.slides6 > .carousel-item.carousel-item-prev.carousel-item-right,
+  .cid-rQjS5xkVOr .carousel-inner.slides6 > .carousel-item.active {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  .cid-rQjS5xkVOr .carousel-inner.slides6 .cloneditem-1,
+  .cid-rQjS5xkVOr .carousel-inner.slides6 .cloneditem-2,
+  .cid-rQjS5xkVOr .carousel-inner.slides6 .cloneditem-3,
+  .cid-rQjS5xkVOr .carousel-inner.slides6 .cloneditem-4,
+  .cid-rQjS5xkVOr .carousel-inner.slides6 .cloneditem-5 {
+    display: block;
+  }
 }
 .cid-rFzmbLknWq .navbar {
   padding: .5rem 0;
@@ -5060,6 +5264,7 @@ section.lazy-placeholder:after {
 }
 .cid-rPshE08sJK .mbr-section-subtitle {
   color: #767676;
+  text-align: left;
 }
 .cid-rPshE08sJK .container-table {
   margin: 0 auto;
@@ -5131,6 +5336,10 @@ section.lazy-placeholder:after {
     width: 100% !important;
     margin-left: 0 !important;
   }
+}
+.cid-rPshE08sJK .mbr-section-title {
+  text-align: center;
+  color: #b1a374;
 }
 .cid-rPOPLPuwK8 {
   padding-top: 90px;
